# PDFs-AI-rename

./: README.md  pdf_part2.py  pdfs_ai_rename.py  pdfs_ai_rename_assistant_api.py  pdfs_ai_rename_png_convert.py  pdfs_ai_rename_pngonly.py  pdfs_ai_rename_tesseract.py  pyproject.toml  testing_chatgpt_4o_vs_5.ipynb
